<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/main_title"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:src="@drawable/title"
        android:contentDescription="@string/logo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <GridLayout
        android:id="@+id/main_grid_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|fill_vertical|center_horizontal|fill_horizontal"
        android:columnCount="3"
        android:rowCount="3"
        android:scrollbars="horizontal|vertical" >

        <Button
            android:id="@+id/button_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/schedule"
            android:scaleType="fitXY"
            android:drawableTop="@drawable/schedule"
            android:text="@string/schedule"
            android:gravity="center_vertical|center_horizontal"
            />

        <Button
            android:id="@+id/button_library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/libraries"
            android:scaleType="fitXY"
            android:drawableTop="@drawable/library"
            android:text="@string/libraries"
            android:gravity="center_vertical|center_horizontal"
             />

        <Button
            android:id="@+id/button_auditorium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/auditoriums"
            android:scaleType="fitXY"
            android:drawableTop="@drawable/auditorium"
            android:text="@string/auditoriums"
            android:gravity="center_vertical|center_horizontal"
             />


        <Button
            android:id="@+id/button_leisure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/leisure"
            android:scaleType="fitXY"
            android:drawableTop="@drawable/leisure"
            android:text="@string/leisure"
            android:gravity="center_vertical|center_horizontal"
            />

        <Button
            android:id="@+id/button_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/map"
            android:scaleType="fitXY"
            android:drawableTop="@drawable/map"
            android:text="@string/map"
            android:gravity="center_vertical|center_horizontal"
            />

         <Button
            android:id="@+id/button_directory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/directories"
            android:scaleType="fitXY"
            android:drawableTop="@drawable/directory"
            android:text="@string/directories"
            android:gravity="center_vertical|center_horizontal"
             />

        <Button
            android:id="@+id/button_icampus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/icampus"
            android:scaleType="fitXY"
            android:drawableTop="@drawable/icampus"
            android:text="@string/icampus"
            android:gravity="center_vertical|center_horizontal"
            android:padding="20dp"
             />

        <Button
            android:id="@+id/button_moodle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/moodle"
            android:scaleType="fitXY"
            android:drawableTop="@drawable/moodle"
            android:text="@string/moodle"
            android:gravity="center_vertical|center_horizontal"
            />

        <Button
            android:id="@+id/button_office"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/office"
            android:scaleType="fitXY"
            android:drawableTop="@drawable/ucl_office"
            android:text="@string/office"
            android:gravity="center_vertical|center_horizontal"
             />
    </GridLayout>

</LinearLayout>