<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/culture_text_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:textIsSelectable="false"
        android:text="@string/culture_text_1"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />
    
    <TextView
        android:id="@+id/culture_text_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:textIsSelectable="false"
        android:text="@string/culture_text_2"
        android:textSize="16sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />
    <TextView
        android:id="@+id/culture_text_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:textIsSelectable="false"
        android:text="@string/culture_text_3"
        android:textSize="16sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />
    
    <LinearLayout
        style="android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical" >

        	<Button
            	android:id="@+id/button_culture_site"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:gravity="center"
            	android:text="@string/button_culture_site" />
        
     </LinearLayout>
    
    <ImageView
        android:id="@+id/culture_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:contentDescription="@string/culture"
        android:src="@drawable/culture_card"/>

</LinearLayout>