<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/course_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_list_explanation" 
        android:textSize="13sp"/>

    <ListView
        android:id="@+id/course_list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal" >

        <Button
            android:id="@+id/course_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_add"
            android:textSize="15sp" />

        <Button
            android:id="@+id/course_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_from_uclouvain" 
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>