<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Blue"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="20dip" >

    <TextView
        android:id="@+id/auditorium_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:textColor="@color/White"
        android:textIsSelectable="true"
        android:textSize="69sp" />

    <TextView
        android:id="@+id/auditorium_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:gravity="top|center_horizontal"
        android:text="@string/subauditorium_address"
        android:textColor="@color/White"
        android:textSize="19sp" />

    <ImageView
        android:id="@+id/auditorium_picture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="17dp"
        android:layout_weight="1"
        android:contentDescription="@string/building_picture_description"
        android:gravity="top|center_horizontal"
        android:text="@string/auditorium_address"
        android:textColor="@color/White"
        android:textSize="19sp" />

    <LinearLayout
        style="android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="36dp" >

        <Button
            android:id="@+id/button_subauditorium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sub_auditorium" />

        <Button
            android:id="@+id/button_auditorium_gps"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/GPS" />
    </LinearLayout>
</LinearLayout>