<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/course_code_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_code" />

    <EditText
        android:id="@+id/course_code_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_code"
        android:singleLine="true" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>

    <TextView
        android:id="@+id/course_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_name" />

    <EditText
        android:id="@+id/course_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_name"
        android:inputType="text"
        android:singleLine="true" />

        <Button
            android:id="@+id/course_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_add" />


</LinearLayout>